--- a/template/src/components/Icon/style.css
+++ b/template/src/components/Icon/style.css
@@ -1,17 +1,16 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.eot?bb8uv2');
-  src: url('fonts/icomoon.eot?bb8uv2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?bb8uv2') format('truetype'),
-    url('fonts/icomoon.woff?bb8uv2') format('woff'),
-    url('fonts/icomoon.svg?bb8uv2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ayte4i');
+  src:  url('fonts/icomoon.eot?ayte4i#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ayte4i') format('truetype'),
+    url('fonts/icomoon.woff?ayte4i') format('woff'),
+    url('fonts/icomoon.svg?ayte4i#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^='icon-'],
-[class*=' icon-'] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -26,15 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+  content: "\e903";
+}
 .icon-cog:before {
-  content: '\e900';
+  content: "\e900";
 }
 .icon-gear:before {
-  content: '\e900';
+  content: "\e900";
 }
 .icon-comment-o:before {
-  content: '\e901';
+  content: "\e901";
 }
 .icon-arrow_back_ios:before {
-  content: '\e902';
+  content: "\e902";
 }
