--- a/template/src/components/Icon/style.css
+++ b/template/src/components/Icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ayte4i');
-  src:  url('fonts/icomoon.eot?ayte4i#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ayte4i') format('truetype'),
-    url('fonts/icomoon.woff?ayte4i') format('woff'),
-    url('fonts/icomoon.svg?ayte4i#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?n673tm');
+  src:  url('fonts/icomoon.eot?n673tm#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?n673tm') format('truetype'),
+    url('fonts/icomoon.woff?n673tm') format('woff'),
+    url('fonts/icomoon.svg?n673tm#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chevron-down:before {
+  content: "\e904";
+}
 .icon-search:before {
   content: "\e903";
 }
@@ -36,6 +39,9 @@
 }
 .icon-comment-o:before {
   content: "\e901";
+}
+.icon-location_on:before {
+  content: "\e905";
 }
 .icon-arrow_back_ios:before {
   content: "\e902";
